added accessibility element

--- a/nucleo-cosmologia.html
+++ b/nucleo-cosmologia.html
@@ -176,12 +176,12 @@
         <!-- ARTIST TEXT SECTION -->
         <section class="nucleo-text-section">
             <div class="nucleo-text-container">
-                <p class="artist-quote">"Antigamente muitas pessoas eram conhecidas por virar toco, animais, folhas e
+                <p class="artist-quote">Antigamente muitas pessoas eram conhecidas por virar toco, animais, folhas e
                     então se dizia que essa capacidade é uma “ciência”, um conhecimento dos antigos. Ver esse “outro
                     mundo” é coisa de gente preparada e que tem “ciência” como os pajés. Ver esse “outro lado” sem os
                     devidos cuidados e a preparação necessária pode levar a uma série de “alucinações” e até mesmo a um
                     estado de loucura. Na aldeia a gente não aprende a lidar com a roça sem lidar com a “ciência” das
-                    plantas, dos bichos, dos tempos."</p>
+                    plantas, dos bichos, dos tempos.</p>
                 <p class="artist-name">Edgar Kanaykõ Xakriabá</p>
                 <!-- Separator line removed as per artist name instead? User asked to "add the artist name below the text". Kept separator line in CSS but HTML structure uses <p>. -->
             </div>
@@ -249,6 +249,20 @@
                     <img src="assets/img/salacosmo_expo_25102025_0200_640.webp" alt="Vista da exposição 14">
                 </a>
             </div>
+        </section>
+
+        <!-- ACCESSIBILITY SECTION -->
+        <section class="accessibility-section">
+            <h3 class="access-title">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="access-icon"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M8 4.143A1.071 1.071 0 1 0 8 2a1.071 1.071 0 0 0 0 2.143m-4.668 1.47 3.24.316v2.5l-.323 4.585A.383.383 0 0 0 7 13.14l.826-4.017c.045-.18.301-.18.346 0L9 13.139a.383.383 0 0 0 .752-.125L9.43 8.43v-2.5l3.239-.316a.38.38 0 0 0-.047-.756H3.379a.38.38 0 0 0-.047.756Z" />
+                    <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8" />
+                </svg>
+                Acesse os recursos de acessibilidade
+            </h3>
+            <img src="assets/img/logos/QRHEMBA.png" alt="QR Code para recursos de acessibilidade" class="access-qr">
         </section>
 
         <!-- LOGOS SECTION -->
