--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
         <section class="quote-section">
             <div class="quote-container">
                 <blockquote class="quote-text" id="quote-text">
-                    “Hêwa tô Tkai nã tet kpēzanī. Watktmã Ropibui psê kuwaba, Dat Wa tar Wa tô dure wa Hêmba.”
+                    “O céu respira a terra. Temos que ter cuidado, pois uma foto é uma imagem.”
                 </blockquote>
-                <p class="quote-author" id="quote-author">– Sekwa Vicente Xakriabá, 2019</p>
+                <p class="quote-author" id="quote-author">– Pajé Vicente Xakriabá, 2019</p>
                 <button class="quote-translate-btn" id="quote-translate-btn">Mudar idioma</button>
             </div>
         </section>
