added background pattern

--- a/apresentacao.html
+++ b/apresentacao.html
@@ -79,6 +79,10 @@
     <!-- MAIN CONTENT -->
     <main>
         <section class="apresentacao-section">
+            <img src="assets/img/logos/grafismos_painelprincipal_1920.png" class="hero-bg-pattern text-page-pattern"
+                alt=""
+                srcset="assets/img/logos/grafismos_painelprincipal_640.png 640w, assets/img/logos/grafismos_painelprincipal_1024.png 1024w, assets/img/logos/grafismos_painelprincipal_1920.png 1920w"
+                sizes="100vw">
             <div class="apresentacao-container">
 
                 <div class="apresentacao-main">
