--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
     <main>
         <!-- HERO SECTION -->
         <section class="hero-section">
+            <img src="assets/img/logos/grafismos_painelprincipal_1920.png" class="hero-bg-pattern" alt=""
+                srcset="assets/img/logos/grafismos_painelprincipal_640.png 640w, assets/img/logos/grafismos_painelprincipal_1024.png 1024w, assets/img/logos/grafismos_painelprincipal_1920.png 1920w"
+                sizes="100vw">
             <div class="hero-content">
                 <!-- Column 1: Title -->
                 <div class="hero-col hero-col-title">
