--- a/nucleo-cosmologia.html
+++ b/nucleo-cosmologia.html
@@ -86,6 +86,9 @@
     <main>
         <!-- NUCLEO HERO SECTION -->
         <section class="nucleo-hero">
+            <img src="assets/img/logos/grafismos_painelprincipal_1920.png" class="hero-bg-pattern" alt=""
+                srcset="assets/img/logos/grafismos_painelprincipal_640.png 640w, assets/img/logos/grafismos_painelprincipal_1024.png 1024w, assets/img/logos/grafismos_painelprincipal_1920.png 1920w"
+                sizes="100vw">
             <div class="nucleo-hero-content">
                 <h1 class="nucleo-title">Cosmologia</h1>
 
